# autotomo

./: .gitignore  README.md  pyproject.toml
Figures/: Thumbs.db
Figures/Archive/: collected_example_data.txt
Figures/Figures_2025-07-15/2025-07-15__17-38/: 07-15__17_38_56 _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-41/: 07-15__17_41_44 _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-44/: 07-15__17_44_42 qin2(141.92), hin2(190.48), _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-47/: 07-15__17_47_26 qf2(276.36), hf2(325.98), _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-52/: 07-15__17_52_31 q12(162.35), h12(307.16), _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-55/: 07-15__17_55_29 _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__17-57/: 07-15__17_57_26 _DATA.csv
Figures/Figures_2025-07-15/2025-07-15__18-02/: 07-15__18_02_04 _DATA.csv
Figures/Figures_2025-07-16/: 2025-07-16__15-57_2_ITERATIONS.csv  2025-07-16__17-09_U_ITERATIONS.csv
src/: home_stages.py  measurement.py  read-data.py  read_data.py  scripting.py  set_stage_angles.py  tomo-auto.py  tomo_auto.py
src/Interfaces/: PM100USB.py  SMC100.py
src/Interfaces/NotificationService/: main.py  (+1 more)
src/Libraries/: AngMenu.py  BasisVectors.py  CharModellingLib.py  CharPlotLib.py  OpticsLib.py  Settings.py  TomoLibrary.py  Waveplate.py  notifier.py
src/Unitaries/: WaveplateAngles.py
src/interfaces/: mock.py  pm100usb.py  tlpmx.py
src/libraries/: angle_menu.py  basis_vectors.py  data_processing.py  optics.py  plotting.py  settings.py  tomography.py  waveplate_angles.py
(+623 files in other folders)
